--- a/dev/tests/functional/fixture/community2/core/Mage/Catalog/uimap/admin/Catalog.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Catalog/uimap/admin/Catalog.yml
@@ -9,7 +9,7 @@
 #
 #
 ---
-url_rewrite_managment:
+url_rewrite_management:
     mca: urlrewrite/
     click_xpath: //ul[@id='nav']//a[contains(@href, 'urlrewrite/')]
     title: Rewrite Rules / Magento Admin
