--- a/fixture/enterprise2/core/Mage/AdminMenu/data/MenuElements.yml
+++ b/fixture/enterprise2/core/Mage/AdminMenu/data/MenuElements.yml
@@ -53,7 +53,7 @@ menu:
         attributes:
             manage_attributes:
             manage_attribute_sets:
-        url_rewrite_managment:
+        url_rewrite_management:
         manage_product_rules:
         search_terms:
         reviews_and_ratings:
