--- a/fixture/community2/core/Mage/SystemConfiguration/data/Captcha.yml
+++ b/fixture/community2/core/Mage/SystemConfiguration/data/Captcha.yml
@@ -37,4 +37,161 @@ enable_admin_captcha:
             captcha_word_length: 4
             captcha_symbols: 1
             captcha_display_mode: Always
-      
+            captcha_case_sensitive: No
+
+choose_admin_forgot_password:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: advanced_admin
+        configuration:
+            captcha_enable_admin: Yes
+            captcha_forms: Admin Forgot Password
+            captcha_word_length: 4
+            captcha_symbols: 1
+            captcha_display_mode: Always
+            captcha_case_sensitive: No
+
+choose_login_form:
+    configuration_scope: Default Config
+    tab_1:
+         tab_name: advanced_admin
+         configuration:
+             captcha_enable_admin: Yes
+             captcha_forms: Admin Login
+             captcha_word_length: 4
+             captcha_symbols: 1
+             captcha_display_mode: Always
+             captcha_case_sensitive: No
+
+admin_captcha_after_attempts_to_login:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: advanced_admin
+        configuration:
+            captcha_enable_admin: Yes
+            captcha_forms: Admin Login
+            captcha_word_length: 4
+            captcha_symbols: 1
+            captcha_display_mode: After number of attempts to login
+            captcha_number_of_attempts: 2
+            captcha_case_sensitive: No
+
+
+zero_attempts_specified:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: advanced_admin
+        configuration:
+            captcha_enable_admin: Yes
+            captcha_forms: Admin Login
+            captcha_word_length: 4
+            captcha_symbols: 1
+            captcha_display_mode: After number of attempts to login
+            captcha_number_of_attempts: '0'
+            captcha_case_sensitive: No
+
+case_sensitive_enable:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: advanced_admin
+        configuration:
+            captcha_enable_admin: Yes
+            captcha_forms: Admin Login
+            captcha_word_length: 4
+            captcha_symbols: A
+            captcha_display_mode: Always
+            captcha_case_sensitive: Yes
+
+case_sensitive_disable:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: advanced_admin
+        configuration:
+            captcha_enable_admin: Yes
+            captcha_forms: Admin Login
+            captcha_word_length: 4
+            captcha_symbols: A
+            captcha_display_mode: Always
+            captcha_case_sensitive: No
+
+disable_admin_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: advanced_admin
+        configuration:
+            captcha_enable_admin: No
+
+enable_front_login_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: Yes
+            captcha_forms: Login
+            captcha_display_mode: Always
+            captcha_word_length: 4
+            captcha_symbols: 1
+
+front_captcha_after_attempts_to_login:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: Yes
+            captcha_forms: Login
+            captcha_display_mode: 'After number of attempts to login'
+            captcha_number_of_attempts: 2
+            captcha_word_length: 4
+            captcha_symbols: 1
+
+enable_front_register_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: Yes
+            captcha_forms: Create user
+            captcha_display_mode: Always
+            captcha_word_length: 4
+            captcha_symbols: 1
+
+enable_front_forgot_password_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: Yes
+            captcha_forms: Forgot password
+            captcha_display_mode: Always
+            captcha_word_length: 4
+            captcha_symbols: 1
+
+enable_front_guest_checkout_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: Yes
+            captcha_forms: Checkout as Guest
+            captcha_display_mode: Always
+            captcha_word_length: 4
+            captcha_symbols: 1
+
+enable_register_during_checkout_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: Yes
+            captcha_forms: Register during Checkout
+            captcha_display_mode: Always
+            captcha_word_length: 4
+            captcha_symbols: 1
+
+disable_frontend_captcha:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: customers_customer_configuration
+        configuration:
+            captcha_enable_frontend: No
+
