Squashed commit of the following:
commit 02c900c9f1b3225a7c600a2ad0729e663f33cfea
Author: Maksym Iakusha <miakusha@ebay.com>
Date:   Tue Jun 26 12:14:30 2012 +0300

    [TEST] Fixed: empty lines in test are deleted

commit 52aa3bd6304707f1f60ada8e000c8987f77f2ec4
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 19:31:27 2012 +0300

    [UIMAP]Captcha update[TEST] DisplayingSettings update

commit f3625abd422a87d4cee62feadff8f3a0a0b6d41a
Merge: 458f137 951c9bf
Author: Maksym Iakusha <miakusha@ebay.com>
Date:   Mon Jun 25 17:06:09 2012 +0300

    Merge remote-tracking branch 'origin/KIEV-QA-DRAGONS-S2' into KIEV-QA-DRAGONS-S2

commit 458f1372cabdee749e9c097ec04a5f94b9364199
Author: Maksym Iakusha <miakusha@ebay.com>
Date:   Mon Jun 25 17:04:46 2012 +0300

    [TEST] Fix TestClass name

commit 951c9bfddab61ee3d45f436df63cbb7838c76b88
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 16:38:03 2012 +0300

    [TEST] Disable,Enable,DisplayingSettings update

commit ce1c59e8ff24404ce326826f493bf7836cf8dd96
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 14:50:16 2012 +0300

    [TEST] DisplayingSettings update

commit 1a0ca7d672014c66a4495538b8962d60b81de169
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 14:40:05 2012 +0300

    [TEST] Disable, DisplayingSettings,Enable update

commit 3023f387c94a1a2208a5bae57536d5c47750d168
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 14:26:24 2012 +0300

    [TEST]  DisplayingSettings,Enable update

commit cc89a144b0e9401bcb7213af2cdf87f209884110
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 14:12:58 2012 +0300

    [TEST] Disable, DisplayingSettings,Enable update

commit c4021694db0b80c343dc5e8cdbd0e352fa6f4588
Author: nkolenko <johndoe@example.com>
Date:   Mon Jun 25 14:09:51 2012 +0300

    [TEST] Disable, DisplayingSettings,Enable update

commit f31218c684121c365c9a7755a4e7594dc2f50835
Merge: d1f4d19 a188f8c
Author: Maksym Iakusha <miakusha@ebay.com>
Date:   Mon Jun 25 13

--- a/dev/functional/fixture/community2/core/Mage/SystemConfiguration/data/Captcha.yml
+++ b/dev/functional/fixture/community2/core/Mage/SystemConfiguration/data/Captcha.yml
@@ -87,7 +87,7 @@ zero_attempts_specified:
             captcha_word_length: 4
             captcha_symbols: 1
             captcha_display_mode: After number of attempts to login
-            captcha_number_of_attempts: '0'
+            captcha_number_of_attempts: 0
             captcha_case_sensitive: No
 
 case_sensitive_enable:
@@ -194,4 +194,3 @@ disable_frontend_captcha:
         tab_name: customers_customer_configuration
         configuration:
             captcha_enable_frontend: No
-
