--- a/dev/tests/functional/fixture/community2/core/Mage/Customer/uimap/frontend/Customer.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Customer/uimap/frontend/Customer.yml
@@ -32,4 +32,59 @@
 forgot_customer_password:
     mca: customer/account/forgotpassword/
     title: Forgot Your Password
+    uimap:
+        form:
+            fieldsets:
+                -
+                    forgot_password:
+                        xpath: //form[@id='form-validate']
+                        buttons:
+                            submit: //button[span='Submit']
+                            captcha_reload: //*[@id='captcha-reload']
+                        fields:
+                            email: //*[@id='email_address']
+                            captcha: //*[@id='captcha_user_forgotpassword']
+                        pageelements:
+                            captcha: //*[@id='user_forgotpassword']
+            messages:
+                empty_captcha: //*[@id='advice-required-entry-captcha_user_forgotpassword']
+                incorrect_captcha: //li[normalize-space(@class)='error-msg' and contains(.,'Incorrect CAPTCHA.')]
+
+
+
 # 'Create an Account' page
+register_account:
+    uimap:
+        form:
+            fieldsets:
+                -
+                    account_info:
+                        fields:
+                            captcha: //*[@id='captcha_user_create']
+                        buttons:
+                            captcha_reload: //*[@id='captcha-reload']
+                        pageelements:
+                            captcha: //*[@id='user_create']
+
+            messages:
+                empty_captcha: //input[@id='captcha_user_create']/following-sibling::*[text()='This is a required field.' and not(contains(@style,'display: none;'))]
+                incorrect_captcha: //li[normalize-space(@class)='error-msg' and contains(.,'Incorrect CAPTCHA.')]
+
+#'Login or Create an Account' page
+customer_login:
+    uimap:
+            form:
+                fieldsets:
+                    -
+                        log_in_customer:
+                            fields:
+                                captcha: //*[@id='captcha_user_login']
+                            buttons:
+                                captcha_reload: //*[@id='captcha-reload']
+                            pageelements:
+                                captcha: //*[@id='user_login']
+
+                messages:
+                    empty_captcha: //input[@id='captcha_user_login']/following-sibling::*[text()='This is a required field.' and not(contains(@style,'display: none;'))]
+                    incorrect_captcha: //li[normalize-space(@class)='error-msg' and contains(.,'Incorrect CAPTCHA.')]
+                    success_forgot_password: //li[normalize-space(@class)='success-msg' and contains(.,'If there is an account associated with %email% you will receive an email with a link to reset your password.')]
