--- a/fixture/enterprise2/core/Mage/ShoppingCart/uimap/frontend/ShoppingCart.yml
+++ b/fixture/enterprise2/core/Mage/ShoppingCart/uimap/frontend/ShoppingCart.yml
@@ -35,6 +35,7 @@ shopping_cart:
                         links:
                             edit: //tr['%productName%']//a[@title='Edit item parameters']
                         pageelements:
+                            product_name: //h2[@class='product-name' and contains(., '%productName%')]
                             item_options: //*[@class ='item-options']//dd[contains(.,'%itemName%')]
                 -
                     products_requiring_attention:
