Conflicts: 	dev/tests/functional/fixture/community2/core/Mage/Home/uimap/admin/LogIn.yml Squashed commit of the following:
commit 8846ddb82fa72ecf19db5909084394a539d1a78e
Merge: e3234a4 4530f7d
Author: Dmytro Aponasenko <daponasenko@ebay.com>
Date:   Fri Jun 22 13:00:14 2012 +0300

    Merge remote-tracking branch 'origin/KIEV-DEV-ArcticOwls-MAGETWO-1462' into KIEV-DEV-ArcticOwls-MAGETWO-1462

commit e3234a422b4ec4cf3cf3d289d7a392e039d51a91
Author: Dmytro Aponasenko <daponasenko@ebay.com>
Date:   Fri Jun 22 12:45:24 2012 +0300

    Fixed MAGETWO-1462: Cover test cases from "Products Requiring Attention grid" testsuite on Frontend
    - [HELPER] [TEST] MAGETWO-1462: Performed code formating according to Magento PHP Coding Standard

commit 4530f7d562acbe46134416c91bd7b83dfd71fa13
Author: Artem Shugayev <ashugayev@ebay.com>
Date:   Wed Jun 20 13:34:18 2012 +0300

    [DATA] Renamed SKUProducts.yml to SkuProducts.yml

commit cd223d3c666e358c2ceb9e224855349a14286959
Author: Dmytro Aponasenko <daponasenko@ebay.com>
Date:   Tue Jun 19 12:34:57 2012 +0300

    Fixed MAGETWO-1462: Cover test cases from "Products Requiring Attention grid" testsuite on Frontend
    - [HELPER] [TEST] MAGETWO-1462: Fixed problems with custom options

commit 408090d4c1a4854f61523c8afce8bbafdad198ea
Author: Dmytro Aponasenko <daponasenko@ebay.com>
Date:   Mon Jun 18 19:19:03 2012 +0300

    Added MAGETWO-1462: Cover test cases from "Products Requiring Attention grid" testsuite on Frontend
    - [HELPER] MAGETWO-1462: Added method to verify products in shopping cart which is not have link in title

commit 304cf8b2ce01e755e6ff9b67f567a62504c0473b
Author: milnytska <milnytska@ebay.com>
Date:   Fri Jun 15 17:01:48 2012 +0300

    Implemented: MAGETWO-1623: Fix all possible fails of functional tests builds on bamboo on allocated time
    - [UIMAP] Add UImap Tag.yml for Community2

commit e7992b71677fc596d532bdddc7b1486ea8a4aa83
Author: Andrii Kasian <akasian@ebay.com>
Date:   Fri Jun 15 10:02:01 2012 -

--- a/dev/tests/functional/fixture/enterprise2/core/Mage/ShoppingCart/uimap/frontend/ShoppingCart.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/ShoppingCart/uimap/frontend/ShoppingCart.yml
@@ -35,6 +35,7 @@ shopping_cart:
                         links:
                             edit: //tr['%productName%']//a[@title='Edit item parameters']
                         pageelements:
+                            product_name: //h2[@class='product-name' and contains(., '%productName%')]
                             item_options: //*[@class ='item-options']//dd[contains(.,'%itemName%')]
                 -
                     products_requiring_attention:
