Conflicts: 	dev/tests/functional/fixture/community2/core/Mage/AdminMenu/data/MenuElements.yml 	dev/tests/functional/fixture/community2/core/Mage/Catalog/uimap/admin/Catalog.yml 	dev/tests/functional/fixture/enterprise2/core/Mage/AdminMenu/data/MenuElements.yml 	dev/tests/functional/fixture/enterprise2/core/Mage/Catalog/uimap/admin/Catalog.yml 	dev/tests/functional/fixture/enterprise2/core/Mage/Customer/uimap/admin/Customers.yml 	dev/tests/functional/fixture/enterprise2/core/Mage/Reports/uimap/admin/Reports.yml 	dev/tests/functional/fixture/enterprise2/core/Mage/System/uimap/admin/System.yml Squashed commit of the following:
commit 235e9cf46076810904c6f7d6dc86cd7896b0afd7
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Tue Jun 26 16:28:16 2012 +0300

    [UIDATA] add Promotions nod and the children

commit ae9a4084494596606ec2bbaa8bd34fc31b3d6cd8
Author: Artem Shugayev <ashugayev@ebay.com>
Date:   Tue Jun 26 11:54:56 2012 +0300

    [CONFIG] Fixed config.yml

commit cab670f5aaf243466258350a4fd4cef6039e2bfb
Author: Vik <vgumeniuk@ebay.com>
Date:   Tue Jun 26 11:38:05 2012 +0300

    [UIMAP] Change description

commit 0e6a1e5dbb972ecc5d90c88cdac21fa4fbcd9d2d
Author: Vik <vgumeniuk@ebay.com>
Date:   Tue Jun 26 11:06:13 2012 +0300

    [UIMAP] Change description

commit ab2c04d6977dd26b3cda15abcbb0e46777542a0a
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Mon Jun 25 14:35:33 2012 +0300

    [TEST][UIDATA][UIMAP] Final commit. Add TestLink case-description. Edit all depended uimaps according to code style. Rename MenuElementData to MenuElement

commit dca081066d42a510613a3126be650cf838ebf2c7
Author: iryna.lagno <ilagno@ebay.com>
Date:   Mon Jun 25 12:42:43 2012 +0300

    [UIMAP][DATA][DRAFT] MAGETWO-1721. Add changes to MenuElementsData.yml(enterprise)

commit d526c0a98914bb06da38a25b446b9873a9a1486b
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Mon Jun 25 12:22:20 2012 +0300

    [UIDATA] fix, uncoment required nods

commit be9cd611a737d3a1c89e95ffd1742ec07c44bd4

--- a/dev/tests/functional/fixture/community2/core/Mage/AdminMenu/data/MenuElements.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/AdminMenu/data/MenuElements.yml
@@ -107,6 +107,11 @@ menu:
             report_customer_accounts:
             report_customer_totals:
             report_customer_orders:
+
+        promotions:
+                    manage_catalog_price_rules:
+                    manage_shopping_cart_price_rules:
+
         tags:
             report_tag_customer:
             report_tag_product:
