--- a/fixture/default/core/Mage/_uimapIncludes/admin.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/admin.yml
@@ -63,6 +63,7 @@ admin_header:
                             dropdown_option_selected: "%dropdownXpath%//option[@selected='selected']"
                             dropdown_option_text_selected: "%dropdownXpath%//option[normalize-space(text())='%optionText%'][@selected='selected']"
                             dropdown_group_option_text: "%dropdownXpath%/optgroup[@label='%optionGroup%']/option[normalize-space(text())='%optionText%']";
+                            table_in_fieldset: "%fieldsetXpath%//table[@id]"
                             table_header_cell_name: //a[span[text()='%cellName%']]
                             table_line: "%tableHeadXpath%/tr"
                             table_column: "%tableHeadXpath%//th"
