--- a/fixture/default/core/Mage/_uimapIncludes/frontend.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/frontend.yml
@@ -54,6 +54,7 @@ frontend_header:
                             dropdown_option_selected: "%dropdownXpath%//option[@selected='selected']"
                             dropdown_option_text_selected: "%dropdownXpath%//option[normalize-space(text())='%optionText%'][@selected='selected']"
                             dropdown_group_option_text: "%dropdownXpath%/optgroup[@label='%optionGroup%']/option[normalize-space(text())='%optionText%']";
+                            table_in_fieldset: "%fieldsetXpath%//table[@id]"
                             table_header_cell_name: //a[span[text()='%cellName%']]
                             table_line: "%tableHeadXpath%/tr"
                             table_column: "%tableHeadXpath%//th"
