Implemented MAGETWO-1950: Сover the “vde_container” widget with js unit tests - Tests for JavaScript code implemented for widget "vde_container"

--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -4,5 +4,13 @@ load:
   - ../../../pub/lib/globalize/*.js
   - ../../../pub/lib/globalize/cultures/*.js
   - ../../../pub/lib/mage/localization/*.js
+  - ../../../pub/js/jquery/jquery-1.7.1.min.js
+  - ../../../pub/js/mage/jquery-no-conflict.js
+  - ../../../pub/js/jquery/jquery-ui-1.8.18.custom.min.js
+  - ../../../app/code/core/Mage/DesignEditor/view/frontend/js/base.js
+  - ../../../app/code/core/Mage/DesignEditor/view/frontend/js/design_editor.js
+  - ../../../pub/js/jquery/jstree/jquery.jstree.js
+  - ../../../pub/js/jquery/slimScroll/slimScroll.min.js
 test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
+  - ../../../dev/tests/js/testsuite/mage/design_editor/*.js
